# aider-server

./: .gitignore  main.py  pyproject.toml  readme.md
aider_server/: .gitignore
